--- a/Demo4Angular/src/app/authority/clients/clients.component.html
+++ b/Demo4Angular/src/app/authority/clients/clients.component.html
@@ -1,13 +1,3 @@
-...
-<br />
-Really
-<br />...<br />...<br />...<br />
-long
-<br />...<br />...<br />...<br />...<br />...<br />...
-<br />...<br />...<br />...<br />...<br />...<br />...
-<br />...<br />...<br />...<br />...<br />...<br />...
-<br />...<br />...<br />...<br />...<br />...<br />...
-<br />...<br />...<br />...<br />...<br />...<br />...
-<br />...<br />...<br />...<br />...<br />...<br />...
-<br />...<br />...<br />...<br />...<br />...<br />
-content
+<button class="btn btn-default" (click)="search()">
+    search
+  </button>
