--- a/Demo4Angular/src/app/sample/sample-a/sample-a.component.html
+++ b/Demo4Angular/src/app/sample/sample-a/sample-a.component.html
@@ -3,3 +3,35 @@
 </p>
 <button nz-button nzType="default" (click)="goback()">go back</button>
 <button nz-button nzType="default" (click)="B()">sample-b</button>
+<div class="gutter-example">
+  <div nz-row nzGutter="32">
+    <div nz-col nzSpan="6">
+      <div>col-6</div>
+    </div>
+    <div nz-col nzSpan="6">
+      <div class="gutter-box">col-6</div>
+    </div>
+    <div nz-col nzSpan="6">
+      <div class="gutter-box">col-6</div>
+    </div>
+    <div nz-col nzSpan="6">
+      <div class="gutter-box">col-6</div>
+    </div>
+  </div>
+</div>
+<div class="gutter-example">
+  <div nz-row [nzGutter]="{ xs: 8, sm: 8, md: 8, lg: 8, xl: 8, xxl: 8 }">
+    <div nz-col class="gutter-row" nzSpan="6">
+      <div class="gutter-box">col-6</div>
+    </div>
+    <div nz-col class="gutter-row" nzSpan="6">
+      <div class="gutter-box">col-6</div>
+    </div>
+    <div nz-col class="gutter-row" nzSpan="6">
+      <div class="gutter-box">col-6</div>
+    </div>
+    <div nz-col class="gutter-row" nzSpan="6">
+      <div class="gutter-box">col-6</div>
+    </div>
+  </div>
+</div>
