--- a/Demo4Angular/src/app/sample/sample-root/sample-root.component.html
+++ b/Demo4Angular/src/app/sample/sample-root/sample-root.component.html
@@ -3,3 +3,35 @@
 </p>
 <button nz-button nzType="default" (click)="A()">sample-a</button>
 <button nz-button nzType="default" (click)="B()">sample-b</button>
+
+<a [routerLink]="['./A']">
+  <i nz-icon type="plus-circle" theme="twotone" twoToneColor="#52c41a"></i>sample-a
+</a>
+<a [routerLink]="['B']">
+  <i nz-icon type="plus-circle" theme="twotone" twoToneColor="#52c41a"></i>sample-b
+</a>
+<a [routerLink]="['/Sample/A']">
+  sample-a
+</a>
+<p>flex row</p>
+<div nz-row nzType="flex" nzJustify="start" nzGutter="16">
+  <div nz-col nzSpan="2">
+    <div class="gutter-box">col-1</div>
+  </div>
+  <div nz-col nzSpan="2">
+    <div class="gutter-box">col-2</div>
+  </div>
+  <div nz-col nzSpan="2">col-3</div>
+  <div nz-col nzSpan="2">col-4</div>
+</div>
+<p>row</p>
+<div nz-row nzGutter="16">
+  <div nz-col nzSpan="6">
+    <div class="gutter-box">col-1</div>
+  </div>
+  <div nz-col nzSpan="6">
+    <div class="gutter-box">col-2</div>
+  </div>
+  <div nz-col nzSpan="6">col-3</div>
+  <div nz-col nzSpan="6">col-4</div>
+</div>
