--- a/Demo4Angular/src/app/authority/api-resource/api-resource.component.css
+++ b/Demo4Angular/src/app/authority/api-resource/api-resource.component.css
@@ -1,10 +1,10 @@
-/* .add-new-content {
+.add-new-content {
   float: right;
 }
 
 .add-new-content .add-new {
   font-size: 36px;
-} */
+}
 
 .search-form {
   padding: 24px;
