--- a/Demo4Angular/src/app/authority/api-resource/api-resource.component.html
+++ b/Demo4Angular/src/app/authority/api-resource/api-resource.component.html
@@ -38,7 +38,7 @@
     </nz-form-control>
   </nz-form-item>
 </form>
-<nz-table #basicTable [nzData]="apiResources" [nzLoading]="isSpinning">
+<nz-table #table [nzData]="apiResources" [nzLoading]="isSpinning">
   <thead>
     <tr>
       <th>Id</th>
@@ -54,7 +54,7 @@
     </tr>
   </thead>
   <tbody>
-    <tr *ngFor="let item of basicTable.data">
+    <tr *ngFor="let item of table.data">
       <td>{{item.id}}</td>
       <td [nzShowCheckbox]="true" [nzDisabled]="true" [nzChecked]="item.enabled"></td>
       <td>{{item.name}}</td>
