--- a/Demo4Angular/src/app/sample/sample-root/sample-root.component.html
+++ b/Demo4Angular/src/app/sample/sample-root/sample-root.component.html
@@ -4,7 +4,7 @@
 <button nz-button nzType="default" (click)="A()">sample-a</button>
 <button nz-button nzType="default" (click)="B()">sample-b</button>
 
-<a [routerLink]="['./A']">
+<a [routerLink]="['A']">
   <i nz-icon type="plus-circle" theme="twotone" twoToneColor="#52c41a"></i>sample-a
 </a>
 <a [routerLink]="['B']">
