--- a/Demo4Angular/src/app/authority/api-resource/api-resource-detail.component.css
+++ b/Demo4Angular/src/app/authority/api-resource/api-resource-detail.component.css
@@ -1,15 +1,16 @@
-.operations a {
-  margin-left: 8px;
+.operation a {
+  margin-right: 8px;
+  font-size: 20px;
 }
 
 .editable-add-btn {
   margin-bottom: 8px;
 }
 
-final-operations {
+.final-operation {
   margin-top: 8px;
 }
 
-final-operations [nz-button] {
-  margin-left: 8px;
+.final-operation [nz-button] {
+  margin-right: 8px;
 }
