--- a/Demo4Angular/src/app/authority/api-resource/api-resource-detail.component.html
+++ b/Demo4Angular/src/app/authority/api-resource/api-resource-detail.component.html
@@ -7,146 +7,60 @@
   </nz-breadcrumb-item>
 </nz-breadcrumb>
 <form nz-form nzLayout="horizontal" [formGroup]="mainForm" (ngSubmit)="submit()">
-  <div nz-row nzGutter="16">
-    <div nz-col nzSpan="10">
-      <nz-form-item>
-        <nz-form-label nzSpan="6" [nzFor]="name" nzRequired>Name</nz-form-label>
-        <nz-form-control nzSpan="18" nzHasFeedback>
-          <input nz-input name="name" placeholder="Name" formControlName="name">
-          <nz-form-explain *ngIf="mainForm.get('name').dirty && mainForm.get('name').errors || mainForm.get('name').pending ">
-            <ng-container *ngIf="mainForm.get('name').hasError('required')">
-              请输入Api Resource Name
-            </ng-container>
-            <ng-container *ngIf="mainForm.get('name').hasError('uniqueApiResourceName')">
-              {{mainForm.get('name').value}} 已经存在
-            </ng-container>
-            <ng-container *ngIf="mainForm.get('name').pending">
-              验证中...
-            </ng-container>
-          </nz-form-explain>
-        </nz-form-control>
-      </nz-form-item>
-    </div>
-    <div nz-col nzSpan="10">
-      <nz-form-item>
-        <nz-form-label nzSpan="6" [nzFor]="displayName">Display Name</nz-form-label>
-        <nz-form-control nzSpan="18">
-          <input nz-input name="displayName" placeholder="DisplayName" formControlName="displayName">
-        </nz-form-control>
-      </nz-form-item>
-    </div>
-  </div>
-  <div nz-row nzGutter="16">
-    <div nz-col nzSpan="20">
-      <nz-form-item>
-        <nz-form-label nzSpan="3" [nzFor]="description">Description</nz-form-label>
-        <nz-form-control nzSpan="21">
-          <textarea nz-input name="description" rows="2" placeholder="Description" formControlName="description"></textarea>
-        </nz-form-control>
-      </nz-form-item>
-    </div>
-  </div>
-  <div nz-row nzGutter="16">
-    <div nz-col nzSpan="6">
-      <nz-form-item>
-        <label nz-checkbox formControlName="enabled">Enabled</label>
-      </nz-form-item>
-    </div>
-    <div nz-col nzSpan="6">
-      <nz-form-item>
-        <label nz-checkbox formControlName="nonEditable">NonEditable</label>
-      </nz-form-item>
-    </div>
-  </div>
-  <div nz-row>
-    <div nz-col nzSpan="20">
-      <button nz-button type="button" class="editable-add-btn" (click)="addApiScret()">Add ApiScret</button>
-    </div>
-  </div>
-  <div nz-row>
-    <div nz-col nzSpan="20">
-      <nz-table #secretsTable nzBordered [nzData]="entity.secrets">
-        <thead>
-          <tr>
-            <th>Id</th>
-            <th>Description</th>
-            <th>Value</th>
-            <th>Expiration</th>
-            <th>Type</th>
-            <th>Created</th>
-            <th>操作</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr *ngFor="let item of secretsTable.data">
-            <td>{{item.id}}</td>
-            <td>
-              <ng-container *ngIf="!secretsEditCache[item.id].edit">
-                {{item.description}}
-              </ng-container>
-              <ng-container *ngIf="secretsEditCache[item.id].edit">
-                <input type="text" nz-input [(ngModel)]="secretsEditCache[item.id].description">
-              </ng-container>
-            </td>
-            <td>
-              <ng-container *ngIf="!secretsEditCache[item.id].edit">
-                {{item.value}}
-              </ng-container>
-              <ng-container *ngIf="secretsEditCache[item.id].edit">
-                <input type="text" nz-input [(ngModel)]="secretsEditCache[item.id].value">
-              </ng-container>
-            </td>
-            <td>
-              <ng-container *ngIf="!secretsEditCache[item.id].edit">
-                {{item.expiration}}
-              </ng-container>
-              <ng-container *ngIf="secretsEditCache[item.id].edit">
-                <nz-date-picker [(ngModel)]="date" (ngModelChange)="secretsEditCache[item.id].expiration=$event"></nz-date-picker>
-              </ng-container>
-            </td>
-            <td>
-              <ng-container *ngIf="!secretsEditCache[item.id].edit">
-                {{item.type}}
-              </ng-container>
-              <ng-container *ngIf="secretsEditCache[item.id].edit">
-                <input type="text" nz-input [(ngModel)]="secretsEditCache[item.id].type">
-              </ng-container>
-            </td>
-            <td>{{item.created | date:'yyyy-MM-dd HH:mm:ss'}}</td>
-            <td>
-              <div class="operations">
-                <ng-container *ngIf="!secretsEditCache[item.id].edit">
-                  <a (click)="startEditSecret(item.id)">
-                    <i nz-icon type="edit" theme="twotone"></i>
-                  </a>
-                  <nz-popconfirm [nzTitle]="'确定删除?'" (nzOnConfirm)="deleteSecret(item.id)">
-                      <a nz-popconfirm>
-                        <i nz-icon type="delete" theme="twotone" twoToneColor="#eb2f96"></i>
-                      </a>
-                    </nz-popconfirm>
-                </ng-container>
-                <ng-container *ngIf="secretsEditCache[item.id].edit">
-                  <a (click)="saveSecret(item.id)">
-                    <i nz-icon type="check-circle" theme="twotone"></i>
-                  </a>
-                  <a (click)="cancelEditSecret(item.id)">
-                    <i nz-icon type="close-circle" theme="twotone"></i>
-                  </a>
-                </ng-container>
-              </div>
-            </td>
-          </tr>
-        </tbody>
-      </nz-table>
-    </div>
-  </div>
-  <div nz-row class="final-operations">
-    <div nz-col nzSpan="10">
-      <button nz-button (click)="goBack()">返回</button>
-    </div>
-    <div nz-col nzSpan="10" style="text-align: right;">
-      <button nz-button nzType="primary" [disabled]="!mainForm.valid" [nzLoading]="isSpinning">Submit</button>
-      <button nz-button (click)="reset($event)">Reset</button>
-    </div>
-  </div>
+  <nz-form-item>
+    <nz-form-label nzSpan="4" [nzFor]="name" nzRequired>Name</nz-form-label>
+    <nz-form-control nzSpan="18" nzHasFeedback>
+      <input nz-input name="name" placeholder="Name" formControlName="name">
+      <nz-form-explain *ngIf="mainForm.get('name').dirty && mainForm.get('name').errors || mainForm.get('name').pending ">
+        <ng-container *ngIf="mainForm.get('name').hasError('required')">
+          请输入Api Resource Name
+        </ng-container>
+        <ng-container *ngIf="mainForm.get('name').hasError('uniqueApiResourceName')">
+          {{mainForm.get('name').value}} 已经存在
+        </ng-container>
+        <ng-container *ngIf="mainForm.get('name').pending">
+          验证中...
+        </ng-container>
+      </nz-form-explain>
+    </nz-form-control>
+  </nz-form-item>
+  <nz-form-item>
+    <nz-form-label nzSpan="4" [nzFor]="displayName">Display Name</nz-form-label>
+    <nz-form-control nzSpan="18">
+      <input nz-input name="displayName" placeholder="DisplayName" formControlName="displayName">
+    </nz-form-control>
+  </nz-form-item>
+  <nz-form-item>
+    <nz-form-label nzSpan="4" [nzFor]="description">Description</nz-form-label>
+    <nz-form-control nzSpan="18">
+      <textarea nz-input name="description" rows="2" placeholder="Description" formControlName="description"></textarea>
+    </nz-form-control>
+  </nz-form-item>
+  <nz-form-item>
+    <nz-form-control nzSpan="6" nzPush="4">
+      <label nz-checkbox formControlName="enabled">Enabled</label>
+    </nz-form-control>
+    <nz-form-control nzSpan="6" nzPush="4">
+      <label nz-checkbox formControlName="nonEditable">NonEditable</label>
+    </nz-form-control>
+  </nz-form-item>
 </form>
+<div nz-row>
+  <div nz-col>
+    <button nz-button type="button" class="editable-add-btn" (click)="addApiScret()">Add ApiScret</button>
+  </div>
+</div>
+<div nz-row>
+  <div nz-col nzSpan="24">
+    <app-api-secret *ngFor="let item of entity.secrets" [apiSecret]="item"></app-api-secret>
+  </div>
+</div>
+<div nz-row class="final-operation">
+  <div nz-col nzSpan="11">
+    <button nz-button (click)="goBack()">返回</button>
+  </div>
+  <div nz-col nzSpan="11" style="text-align: right;">
+    <button nz-button nzType="primary" [disabled]="!mainForm.valid" [nzLoading]="isSpinning">Submit</button>
+    <button nz-button (click)="reset($event)">Reset</button>
+  </div>
+</div>
