--- a/Demo4Angular/src/app/authority/api-resource/api-secret/api-secret.component.css
+++ b/Demo4Angular/src/app/authority/api-resource/api-secret/api-secret.component.css
@@ -1,8 +1,24 @@
 .main-form {
-  padding: 4px;
+  margin: 8px;
+  padding: 24px;
   background: #fbfbfb;
   border: 1px solid #d9d9d9;
   border-radius: 6px;
+}
+
+p {
+  text-align: left;
+  vertical-align: middle;
+  line-height: 32px;
+  overflow: hidden;
+  white-space: nowrap;
+}
+
+.operation {
+  position: static;
+  top: 4px;
+  right: 4px;
+  display: block;
 }
 
 .operation a {
