--- a/Demo4Angular/src/app/authority/api-resource/api-secret/api-secret.component.html
+++ b/Demo4Angular/src/app/authority/api-resource/api-secret/api-secret.component.html
@@ -1,87 +1,127 @@
-<form nz-form class="main-form" [formGroup]="mainForm" (ngSubmit)="submit()">
+<form [formGroup]="mainForm" class="main-form" [style.display]="edit?'none':'block'">
   <div nz-row>
     <div nz-col nzSpan="8">
-      <nz-form-label>Id</nz-form-label>
-      {{mainForm.get('id').value}}
+      <nz-form-item nzFlex>
+        <nz-form-label nzSpan="6">Id</nz-form-label>
+        <nz-form-control nzSpan="18">
+          <p>{{mainForm.get('id').value}}</p>
+        </nz-form-control>
+      </nz-form-item>
     </div>
     <div nz-col nzSpan="8">
-      <nz-form-label nzFor="value" nzRequired>Value</nz-form-label>
-      <ng-container *ngIf="!edit">
-        {{mainForm.get('value').value}}
-      </ng-container>
-      <ng-container *ngIf="edit">
-        <nz-form-control>
+      <nz-form-item nzFlex>
+        <nz-form-label nzSpan="6" nzFor="value" nzRequired>Value</nz-form-label>
+        <nz-form-control nzSpan="18">
+          <p> {{mainForm.get('value').value}}</p>
+        </nz-form-control>
+      </nz-form-item>
+    </div>
+    <div nz-col nzSpan="8">
+      <nz-form-item nzFlex>
+        <nz-form-label nzSpan="6" nzFor="type" nzRequired>Type</nz-form-label>
+        <nz-form-control nzSpan="18">
+          <p> {{mainForm.get('type').value}}</p>
+        </nz-form-control>
+      </nz-form-item>
+    </div>
+  </div>
+  <div nz-row>
+    <div nz-col nzSpan="8">
+      <nz-form-item nzFlex>
+        <nz-form-label nzSpan="6" nzFor="description">Description</nz-form-label>
+        <nz-form-control nzSpan="18">
+          <p> {{mainForm.get('description').value}}</p>
+        </nz-form-control>
+      </nz-form-item>
+    </div>
+    <div nz-col nzSpan="8">
+      <nz-form-item nzFlex>
+        <nz-form-label nzSpan="6" nzFor="expiration">Expiration</nz-form-label>
+        <nz-form-control nzSpan="18">
+          <p> {{mainForm.get('expiration').value | date:'yyyy-MM-dd HH:mm:ss'}}</p>
+        </nz-form-control>
+      </nz-form-item>
+    </div>
+    <div nz-col nzSpan="8">
+      <nz-form-item nzFlex>
+        <nz-form-label nzSpan="6" nzFor="created" nzRequired>Created</nz-form-label>
+        <nz-form-control nzSpan="18">
+          <p>{{mainForm.get('created').value | date:'yyyy-MM-dd HH:mm:ss' }}</p>
+        </nz-form-control>
+      </nz-form-item>
+    </div>
+  </div>
+  <div class="operation">
+    <a (click)="edit=true">
+      <i nz-icon type="edit" theme="twotone"></i>
+    </a>
+    <nz-popconfirm [nzTitle]="'确定删除?'" (nzOnConfirm)="delete(item.id)">
+      <a nz-popconfirm>
+        <i nz-icon type="delete" theme="twotone" twoToneColor="#eb2f96"></i>
+      </a>
+    </nz-popconfirm>
+  </div>
+</form>
+
+<form [formGroup]="mainForm" (ngSubmit)="submit()" class="main-form" [style.display]="edit?'block':'none'">
+  <div nz-row>
+    <div nz-col nzSpan="8">
+      <nz-form-item nzFlex>
+        <nz-form-label nzSpan="6">Id</nz-form-label>
+        <nz-form-control nzSpan="18">
+          <p>{{mainForm.get('id').value}}</p>
+        </nz-form-control>
+      </nz-form-item>
+    </div>
+    <div nz-col nzSpan="8">
+      <nz-form-item nzFlex>
+        <nz-form-label nzSpan="6" nzFor="value" nzRequired>Value</nz-form-label>
+        <nz-form-control nzSpan="18">
           <input nz-input id="value" placeholder="Value" formControlName="value">
         </nz-form-control>
-      </ng-container>
+      </nz-form-item>
     </div>
     <div nz-col nzSpan="8">
-      <nz-form-label nzFor="type" nzRequired>Type</nz-form-label>
-      <ng-container *ngIf="!edit">
-        {{mainForm.get('type').value}}
-      </ng-container>
-      <ng-container *ngIf="edit">
-        <nz-form-control>
+      <nz-form-item nzFlex>
+        <nz-form-label nzSpan="6" nzFor="type" nzRequired>Type</nz-form-label>
+        <nz-form-control nzSpan="18">
           <input nz-input id="type" placeholder="Type" formControlName="type">
         </nz-form-control>
-      </ng-container>
+      </nz-form-item>
     </div>
   </div>
   <div nz-row>
     <div nz-col nzSpan="8">
-      <nz-form-label nzFor="description">Description</nz-form-label>
-      <ng-container *ngIf="!edit">
-        {{mainForm.get('description').value}}
-      </ng-container>
-      <ng-container *ngIf="edit">
-        <nz-form-control>
+      <nz-form-item nzFlex>
+        <nz-form-label nzSpan="6" nzFor="description">Description</nz-form-label>
+        <nz-form-control nzSpan="18">
           <input nz-input id="description" placeholder="Description" formControlName="description">
         </nz-form-control>
-      </ng-container>
+      </nz-form-item>
     </div>
     <div nz-col nzSpan="8">
-      <nz-form-label nzFor="expiration">Expiration</nz-form-label>
-      <ng-container *ngIf="!edit">
-        {{mainForm.get('expiration').value | date:'yyyy-MM-dd HH:mm:ss'}}
-      </ng-container>
-      <ng-container *ngIf="edit">
-        <nz-form-control>
+      <nz-form-item nzFlex>
+        <nz-form-label nzSpan="6" nzFor="expiration">Expiration</nz-form-label>
+        <nz-form-control nzSpan="18">
           <nz-date-picker id="expiration" formControlName="expiration" nzShowTime nzFormat="yyyy-MM-dd HH:mm:ss"></nz-date-picker>
         </nz-form-control>
-      </ng-container>
+      </nz-form-item>
     </div>
     <div nz-col nzSpan="8">
-      <nz-form-label nzFor="created" nzRequired>Created</nz-form-label>
-      <ng-container *ngIf="!edit">
-        {{mainForm.get('created').value | date:'yyyy-MM-dd HH:mm:ss' }}
-      </ng-container>
-      <ng-container *ngIf="edit">
-        <nz-form-control>
+      <nz-form-item nzFlex>
+        <nz-form-label nzSpan="6" nzFor="created" nzRequired>Created</nz-form-label>
+        <nz-form-control nzSpan="18">
           <nz-date-picker id="created" formControlName="created" nzShowTime nzFormat="yyyy-MM-dd HH:mm:ss" nzDisabled="true"></nz-date-picker>
         </nz-form-control>
-      </ng-container>
+      </nz-form-item>
     </div>
   </div>
-  <div nz-row>
-    <div nz-col nzSpan="8" class="operation">
-      <ng-container *ngIf="!edit">
-        <a (click)="edit=true">
-          <i nz-icon type="edit" theme="twotone"></i>
-        </a>
-        <nz-popconfirm [nzTitle]="'确定删除?'" (nzOnConfirm)="delete(item.id)">
-          <a nz-popconfirm>
-            <i nz-icon type="delete" theme="twotone" twoToneColor="#eb2f96"></i>
-          </a>
-        </nz-popconfirm>
-      </ng-container>
-      <ng-container *ngIf="edit">
-        <a (click)="save(item.id)">
-          <i nz-icon type="check-circle" theme="twotone"></i>
-        </a>
-        <a (click)="edit=false">
-          <i nz-icon type="close-circle" theme="twotone"></i>
-        </a>
-      </ng-container>
-    </div>
+  <div class="operation">
+    <a (click)="save(item.id)">
+      <i nz-icon type="check-circle" theme="twotone"></i>
+    </a>
+    <a (click)="edit=false">
+      <i nz-icon type="close-circle" theme="twotone"></i>
+    </a>
   </div>
 </form>
