--- a/Demo4Angular/src/app/authority/api-resource/api-resource-detail.component.css
+++ b/Demo4Angular/src/app/authority/api-resource/api-resource-detail.component.css
@@ -1,16 +1,24 @@
-.operation a {
+.main-form {
+  margin: 8px;
+  padding: 24px;
+  background: #fbfbfb;
+  border: 1px solid #d9d9d9;
+  border-radius: 6px;
+}
+
+/* .operation a {
   margin-right: 8px;
   font-size: 20px;
+} */
+
+/* .editable-add-btn {
+  margin: 8px;
+} */
+
+.operation {
+  margin: 8px;
 }
 
-.editable-add-btn {
-  margin-bottom: 8px;
-}
-
-.final-operation {
-  margin-top: 8px;
-}
-
-.final-operation [nz-button] {
+/* .final-operation [nz-button] {
   margin-right: 8px;
-}
+} */
