--- a/Demo4Angular/src/app/authority/api-resource/api-resource.component.css
+++ b/Demo4Angular/src/app/authority/api-resource/api-resource.component.css
@@ -1,8 +1,8 @@
-.add-new-content {
+.add-new-container {
   float: right;
 }
 
-.add-new-content .add-new {
+.add-new-container .add-new {
   font-size: 36px;
 }
 
@@ -18,7 +18,3 @@
   margin-right: 8px;
   font-size:20px;
 }
-
-/* .operation [nz-button] {
-  margin-right: 4px;
-} */
