--- a/Demo4Angular/src/app/authority/api-resource/api-secret/api-secret.component.html
+++ b/Demo4Angular/src/app/authority/api-resource/api-secret/api-secret.component.html
@@ -4,7 +4,7 @@
       <nz-form-item nzFlex>
         <nz-form-label nzSpan="6">Id</nz-form-label>
         <nz-form-control nzSpan="18">
-          <p>{{mainForm.get('id').value}}</p>
+          <nz-form-text>{{mainForm.get('id').value}}</nz-form-text>
         </nz-form-control>
       </nz-form-item>
     </div>
@@ -12,7 +12,7 @@
       <nz-form-item nzFlex>
         <nz-form-label nzSpan="6" nzFor="value" nzRequired>Value</nz-form-label>
         <nz-form-control nzSpan="18">
-          <p> {{mainForm.get('value').value}}</p>
+          <nz-form-text> {{mainForm.get('value').value}}</nz-form-text>
         </nz-form-control>
       </nz-form-item>
     </div>
@@ -20,7 +20,7 @@
       <nz-form-item nzFlex>
         <nz-form-label nzSpan="6" nzFor="type" nzRequired>Type</nz-form-label>
         <nz-form-control nzSpan="18">
-          <p> {{mainForm.get('type').value}}</p>
+          <nz-form-text> {{mainForm.get('type').value}}</nz-form-text>
         </nz-form-control>
       </nz-form-item>
     </div>
@@ -30,7 +30,7 @@
       <nz-form-item nzFlex>
         <nz-form-label nzSpan="6" nzFor="description">Description</nz-form-label>
         <nz-form-control nzSpan="18">
-          <p> {{mainForm.get('description').value}}</p>
+          <nz-form-text> {{mainForm.get('description').value}}</nz-form-text>
         </nz-form-control>
       </nz-form-item>
     </div>
@@ -38,7 +38,7 @@
       <nz-form-item nzFlex>
         <nz-form-label nzSpan="6" nzFor="expiration">Expiration</nz-form-label>
         <nz-form-control nzSpan="18">
-          <p> {{mainForm.get('expiration').value | date:'yyyy-MM-dd HH:mm:ss'}}</p>
+          <nz-form-text> {{mainForm.get('expiration').value | date:'yyyy-MM-dd HH:mm:ss'}}</nz-form-text>
         </nz-form-control>
       </nz-form-item>
     </div>
@@ -46,7 +46,7 @@
       <nz-form-item nzFlex>
         <nz-form-label nzSpan="6" nzFor="created" nzRequired>Created</nz-form-label>
         <nz-form-control nzSpan="18">
-          <p>{{mainForm.get('created').value | date:'yyyy-MM-dd HH:mm:ss' }}</p>
+          <nz-form-text>{{mainForm.get('created').value | date:'yyyy-MM-dd HH:mm:ss' }}</nz-form-text>
         </nz-form-control>
       </nz-form-item>
     </div>
@@ -55,7 +55,7 @@
     <a (click)="edit=true">
       <i nz-icon type="edit" theme="twotone"></i>
     </a>
-    <nz-popconfirm [nzTitle]="'确定删除?'" (nzOnConfirm)="delete(item.id)">
+    <nz-popconfirm [nzTitle]="'确定删除?'" (nzOnConfirm)="delete()">
       <a nz-popconfirm>
         <i nz-icon type="delete" theme="twotone" twoToneColor="#eb2f96"></i>
       </a>
@@ -69,7 +69,7 @@
       <nz-form-item nzFlex>
         <nz-form-label nzSpan="6">Id</nz-form-label>
         <nz-form-control nzSpan="18">
-          <p>{{mainForm.get('id').value}}</p>
+          <nz-form-text>{{mainForm.get('id').value}}</nz-form-text>
         </nz-form-control>
       </nz-form-item>
     </div>
@@ -117,10 +117,10 @@
     </div>
   </div>
   <div class="operation">
-    <a (click)="save(item.id)">
+    <a (click)="save()">
       <i nz-icon type="check-circle" theme="twotone"></i>
     </a>
-    <a (click)="edit=false">
+    <a (click)="cancel()">
       <i nz-icon type="close-circle" theme="twotone"></i>
     </a>
   </div>
