--- a/Demo4Angular/src/app/authority/api-resource/api-secret/api-secret.component.css
+++ b/Demo4Angular/src/app/authority/api-resource/api-secret/api-secret.component.css
@@ -1,27 +1,32 @@
+/* :host ::ng-deep .main-form:hover {
+  background-color: #f7f7f7;
+} */
 .main-form {
-  margin: 8px;
-  padding: 24px;
+  position: relative;
+  margin-bottom: 8px;
+  padding: 24px 24px 0 24px;
   background: #fbfbfb;
   border: 1px solid #d9d9d9;
   border-radius: 6px;
+  transition: all .3s;
 }
 
-p {
-  text-align: left;
-  vertical-align: middle;
-  line-height: 32px;
-  overflow: hidden;
-  white-space: nowrap;
+.main-form:hover {
+  border: 1px solid #1890ff;
+}
+
+.main-form:hover .operation {
+  display: block;
 }
 
 .operation {
-  position: static;
-  top: 4px;
+  position: absolute;
+  top: 1px;
   right: 4px;
-  display: block;
+  display: none;
 }
 
 .operation a {
   margin-right: 8px;
-  font-size: 20px;
+  font-size: 16px;
 }
