--- a/Demo4Angular/src/app/authority/api-resource/api-secret/api-secret.component.html
+++ b/Demo4Angular/src/app/authority/api-resource/api-secret/api-secret.component.html
@@ -1,4 +1,5 @@
 <form [formGroup]="mainForm" class="main-form" [style.display]="edit?'none':'block'">
+  <nz-spin nzSize="small" [nzSpinning]="isSpinning"></nz-spin>
   <div nz-row>
     <div nz-col nzSpan="8">
       <nz-form-item nzFlex>
@@ -111,13 +112,13 @@
       <nz-form-item nzFlex>
         <nz-form-label nzSpan="6" nzFor="created" nzRequired>Created</nz-form-label>
         <nz-form-control nzSpan="18">
-          <nz-date-picker id="created" formControlName="created" nzShowTime nzFormat="yyyy-MM-dd HH:mm:ss" nzDisabled="true"></nz-date-picker>
+          <nz-form-text>{{mainForm.get('created').value | date:'yyyy-MM-dd HH:mm:ss' }}</nz-form-text>
         </nz-form-control>
       </nz-form-item>
     </div>
   </div>
   <div class="operation">
-    <a (click)="save()">
+    <a (click)="submit()">
       <i nz-icon type="check-circle" theme="twotone"></i>
     </a>
     <a (click)="cancel()">
