--- a/Demo4Angular/src/app/sample/sample-a/sample-a.component.html
+++ b/Demo4Angular/src/app/sample/sample-a/sample-a.component.html
@@ -9,7 +9,7 @@
       <div>col-6</div>
     </div>
     <div nz-col nzSpan="6">
-      <div class="gutter-box">col-6</div>
+      <div class="gutter-box"><a [routerLink]="['./',1]">detail 1</a></div>
     </div>
     <div nz-col nzSpan="6">
       <div class="gutter-box">col-6</div>
