--- a/Demo4Angular/src/app/authority/api-resource/api-resource-detail.component.html
+++ b/Demo4Angular/src/app/authority/api-resource/api-resource-detail.component.html
@@ -6,7 +6,7 @@
     New
   </nz-breadcrumb-item>
 </nz-breadcrumb>
-<form nz-form nzLayout="horizontal" [formGroup]="mainForm" (ngSubmit)="submit()" class="main-form">
+<form nz-form nzLayout="horizontal" [formGroup]="mainForm" class="main-form">
   <nz-form-item>
     <nz-form-label nzSpan="3" [nzFor]="name" nzRequired>Name</nz-form-label>
     <nz-form-control nzSpan="21" nzHasFeedback>
@@ -43,26 +43,30 @@
     <nz-form-control nzSpan="6" nzPush="3">
       <label nz-checkbox formControlName="nonEditable">NonEditable</label>
     </nz-form-control>
+    <nz-form-label nzSpan="2">Id</nz-form-label>
+    <nz-form-control nzSpan="2">
+      <nz-form-text>{{mainForm.get('id').value}}</nz-form-text>
+    </nz-form-control>
   </nz-form-item>
 </form>
-<div nz-row class="operation">
+<!-- <div nz-row class="operation">
   <div nz-col nzSpan="24">
-    <button nz-button type="button" class="editable-add-btn" (click)="addApiScret()" [disabled]="this.apiResource.state===EntityState.Added">
+    <button nz-button type="button" class="editable-add-btn" (click)="addApiScret()" [disabled]="this.apiResource.state===4">
       Add ApiScret
     </button>
   </div>
-</div>
-<div nz-row>
-  <div nz-col nzSpan="24">
-    <app-api-secret *ngFor="let item of apiResource.secrets" [apiSecret]="item"></app-api-secret>
-  </div>
+</div> -->
+<nz-form-split>Api Secret</nz-form-split>
+<app-api-secret *ngFor="let item of apiResource.secrets" [apiSecret]="item"></app-api-secret>
+<div class="empty-api-secret">
+    <button nz-button type="button" nzType="dashed" (click)="addApiScret()" [disabled]="this.apiResource.state===4">Add Api Secret</button>
 </div>
 <div nz-row class="operation">
   <div nz-col nzSpan="12">
     <button nz-button (click)="goBack()">返回</button>
   </div>
   <div nz-col nzSpan="12" style="text-align: right;">
-    <button nz-button nzType="primary" [disabled]="!mainForm.valid" [nzLoading]="isSpinning" style="margin-right: 8px;">Submit</button>
-    <button nz-button (click)="reset($event)">Reset</button>
+    <button nz-button nzType="primary" [disabled]="!mainForm.valid" [nzLoading]="isSpinning" (click)="submit()" style="margin-right: 8px;">Submit</button>
+    <button nz-button type="button" (click)="reset()">Reset</button>
   </div>
 </div>
