--- a/Demo4Angular/src/app/authority/api-resource/api-resource-detail.component.html
+++ b/Demo4Angular/src/app/authority/api-resource/api-resource-detail.component.html
@@ -58,9 +58,16 @@
 </div> -->
 <nz-form-split>Api Secret</nz-form-split>
 <app-api-secret *ngFor="let item of apiResource.secrets" [apiSecret]="item"></app-api-secret>
-<div class="empty-api-secret">
+<div class="empty-subitem">
     <button nz-button type="button" nzType="dashed" (click)="addApiScret()" [disabled]="this.apiResource.state===4">Add Api Secret</button>
 </div>
+
+<nz-form-split>Api Scope</nz-form-split>
+<app-api-scope *ngFor="let item of apiResource.scopes" [apiScope]="item"></app-api-scope>
+<div class="empty-subitem">
+    <button nz-button type="button" nzType="dashed" (click)="addApiScope()" [disabled]="this.apiResource.state===4">Add Api Scope</button>
+</div>
+
 <div nz-row class="operation">
   <div nz-col nzSpan="12">
     <button nz-button (click)="goBack()">返回</button>
